<?xml version="1.0"?>
<package format="2">
  <name>hear_ros_bridge</name>
  <version>0.0.0</version>
  <description>The HEAR-ROS Bridge package</description>
  <maintainer email="mohamad.wahbah@outlook.com">moawahbah</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>hear_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <export>
  </export>
</package>
